// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VmDetails /> does not render CPU and Memory settings for VM without custom flavor 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd
          id="my-namespace-my-vm-name"
        >
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div
              id="my-namespace-my-vm-description"
            >
              ---
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <div>
                <span
                  aria-hidden="true"
                  class="kubevirt-vm-status__icon pficon pficon-off"
                />
                Off
              </div>
            </dd>
            <dt>
              Operating System
            </dt>
            <dd
              id="my-namespace-my-vm-os"
            >
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd
              id="my-namespace-my-vm-ip-addresses"
            >
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd
              id="my-namespace-my-vm-workload-profile"
            >
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd
              id="my-namespace-my-vm-template"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd
              id="my-namespace-my-vm-fqdn"
            >
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd
              id="my-namespace-my-vm-namespace"
            >
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd
              id="my-namespace-my-vm-pod"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd
              id="my-namespace-my-vm-node"
            >
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div
                  id="my-namespace-my-vm-flavor"
                >
                  small
                </div>
                <div
                  id="my-namespace-my-vm-flavor-description"
                />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders CPU and Memory settings for VM with custom flavor 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd
          id="my-namespace-my-vm-name"
        >
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div
              id="my-namespace-my-vm-description"
            >
              ---
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <div>
                <span
                  aria-hidden="true"
                  class="kubevirt-vm-status__icon pficon pficon-off"
                />
                Off
              </div>
            </dd>
            <dt>
              Operating System
            </dt>
            <dd
              id="my-namespace-my-vm-os"
            >
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd
              id="my-namespace-my-vm-ip-addresses"
            >
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd
              id="my-namespace-my-vm-workload-profile"
            >
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd
              id="my-namespace-my-vm-template"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd
              id="my-namespace-my-vm-fqdn"
            >
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd
              id="my-namespace-my-vm-namespace"
            >
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd
              id="my-namespace-my-vm-pod"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd
              id="my-namespace-my-vm-node"
            >
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div
                  id="my-namespace-my-vm-flavor"
                >
                  Custom
                </div>
                <div
                  id="my-namespace-my-vm-flavor-description"
                >
                  2 CPU, 4G Memory
                </div>
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders IP addresses correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <div
        class="kubevirt-vm-details__edit-info"
      >
        <button
          class="popover-pf-info btn btn-link"
          type="button"
        >
          <span
            aria-hidden="true"
            class="pficon pficon-info"
          />
        </button>
      </div>
      <button
        class="btn btn-default"
        disabled=""
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd
          id="my-namespace-my-vm-name"
        >
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div
              id="my-namespace-my-vm-description"
            >
              ---
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <div>
                <span
                  aria-hidden="true"
                  class="kubevirt-vm-status__icon pficon pficon-on-running"
                />
                Running
              </div>
            </dd>
            <dt>
              Operating System
            </dt>
            <dd
              id="my-namespace-my-vm-os"
            >
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd
              id="my-namespace-my-vm-ip-addresses"
            >
              172.17.0.15, 172.17.0.16, 172.17.0.17
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd
              id="my-namespace-my-vm-workload-profile"
            >
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd
              id="my-namespace-my-vm-template"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd
              id="my-namespace-my-vm-fqdn"
            >
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd
              id="my-namespace-my-vm-namespace"
            >
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd
              id="my-namespace-my-vm-pod"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd
              id="my-namespace-my-vm-node"
            >
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div
                  id="my-namespace-my-vm-flavor"
                >
                  Custom
                </div>
                <div
                  id="my-namespace-my-vm-flavor-description"
                />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd
          id="my-namespace-my-vm-name"
        >
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div
              id="my-namespace-my-vm-description"
            >
              ---
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <div>
                <span
                  aria-hidden="true"
                  class="kubevirt-vm-status__icon pficon pficon-off"
                />
                Off
              </div>
            </dd>
            <dt>
              Operating System
            </dt>
            <dd
              id="my-namespace-my-vm-os"
            >
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd
              id="my-namespace-my-vm-ip-addresses"
            >
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd
              id="my-namespace-my-vm-workload-profile"
            >
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd
              id="my-namespace-my-vm-template"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd
              id="my-namespace-my-vm-fqdn"
            >
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd
              id="my-namespace-my-vm-namespace"
            >
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd
              id="my-namespace-my-vm-pod"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd
              id="my-namespace-my-vm-node"
            >
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div
                  id="my-namespace-my-vm-flavor"
                >
                  Custom
                </div>
                <div
                  id="my-namespace-my-vm-flavor-description"
                />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders description correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd
          id="my-namespace-my-vm-name"
        >
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div
              id="my-namespace-my-vm-description"
            >
              This VM has a description
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <div>
                <span
                  aria-hidden="true"
                  class="kubevirt-vm-status__icon pficon pficon-off"
                />
                Off
              </div>
            </dd>
            <dt>
              Operating System
            </dt>
            <dd
              id="my-namespace-my-vm-os"
            >
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd
              id="my-namespace-my-vm-ip-addresses"
            >
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd
              id="my-namespace-my-vm-workload-profile"
            >
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd
              id="my-namespace-my-vm-template"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd
              id="my-namespace-my-vm-fqdn"
            >
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd
              id="my-namespace-my-vm-namespace"
            >
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd
              id="my-namespace-my-vm-pod"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd
              id="my-namespace-my-vm-node"
            >
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div
                  id="my-namespace-my-vm-flavor"
                >
                  Custom
                </div>
                <div
                  id="my-namespace-my-vm-flavor-description"
                />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders off status correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd
          id="my-namespace-my-vm-name"
        >
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div
              id="my-namespace-my-vm-description"
            >
              ---
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <div>
                <span
                  aria-hidden="true"
                  class="kubevirt-vm-status__icon pficon pficon-off"
                />
                Off
              </div>
            </dd>
            <dt>
              Operating System
            </dt>
            <dd
              id="my-namespace-my-vm-os"
            >
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd
              id="my-namespace-my-vm-ip-addresses"
            >
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd
              id="my-namespace-my-vm-workload-profile"
            >
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd
              id="my-namespace-my-vm-template"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd
              id="my-namespace-my-vm-fqdn"
            >
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd
              id="my-namespace-my-vm-namespace"
            >
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd
              id="my-namespace-my-vm-pod"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd
              id="my-namespace-my-vm-node"
            >
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div
                  id="my-namespace-my-vm-flavor"
                >
                  Custom
                </div>
                <div
                  id="my-namespace-my-vm-flavor-description"
                />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders on status correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <div
        class="kubevirt-vm-details__edit-info"
      >
        <button
          class="popover-pf-info btn btn-link"
          type="button"
        >
          <span
            aria-hidden="true"
            class="pficon pficon-info"
          />
        </button>
      </div>
      <button
        class="btn btn-default"
        disabled=""
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd
          id="my-namespace-my-vm-name"
        >
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div
              id="my-namespace-my-vm-description"
            >
              ---
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <div>
                <span
                  aria-hidden="true"
                  class="kubevirt-vm-status__icon pficon pficon-on-running"
                />
                Running
              </div>
            </dd>
            <dt>
              Operating System
            </dt>
            <dd
              id="my-namespace-my-vm-os"
            >
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd
              id="my-namespace-my-vm-ip-addresses"
            >
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd
              id="my-namespace-my-vm-workload-profile"
            >
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd
              id="my-namespace-my-vm-template"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd
              id="my-namespace-my-vm-fqdn"
            >
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd
              id="my-namespace-my-vm-namespace"
            >
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd
              id="my-namespace-my-vm-pod"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd
              id="my-namespace-my-vm-node"
            >
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div
                  id="my-namespace-my-vm-flavor"
                >
                  Custom
                </div>
                <div
                  id="my-namespace-my-vm-flavor-description"
                />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders values from labels correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd
          id="my-namespace-my-vm-name"
        >
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div
              id="my-namespace-my-vm-description"
            >
              ---
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <div>
                <span
                  aria-hidden="true"
                  class="kubevirt-vm-status__icon pficon pficon-off"
                />
                Off
              </div>
            </dd>
            <dt>
              Operating System
            </dt>
            <dd
              id="my-namespace-my-vm-os"
            >
              fedora29
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd
              id="my-namespace-my-vm-ip-addresses"
            >
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd
              id="my-namespace-my-vm-workload-profile"
            >
              generic
            </dd>
            <dt>
              Template
            </dt>
            <dd
              id="my-namespace-my-vm-template"
            >
              default/fedora-generic
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd
              id="my-namespace-my-vm-fqdn"
            >
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd
              id="my-namespace-my-vm-namespace"
            >
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd
              id="my-namespace-my-vm-pod"
            >
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd
              id="my-namespace-my-vm-node"
            >
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div
                  id="my-namespace-my-vm-flavor"
                >
                  small
                </div>
                <div
                  id="my-namespace-my-vm-flavor-description"
                >
                  2 CPU, 2G Memory
                </div>
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;
